--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
 asgiref==3.5.0
+beautifulsoup4==4.11.1
+black==22.3.0
+bs4==0.0.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.4
 Django==4.0.4
+idna==3.4
+mypy-extensions==0.4.3
+numpy==1.23.5
+pathspec==0.9.0
+platformdirs==2.5.2
+requests==2.28.1
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
+tomli==2.0.1
 tzdata==2022.1
+urllib3==1.26.12
+XlsxWriter==3.0.3
